# Projekt_Aizo_2

./: Adjacency_List.h  Algorythms_Menu .h  Algorythms_Menu.h  CMakeLists.txt  File_Reading.h  Generate.h  Incidence_Matrix.h  MST_Algorythms .h  MST_Algorythms.h  MST_Menu.h  Main_Menu.h  Projekt_main.cpp  README.md  Shortest_Path_Menu.h  Shorthest_Path_Algorythms.h  Show_Graph.h  Show_Menu.h  Testing.h
